upgrade-best-practices/scenario-1-ing-gw/canary/web-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-canary
  labels:
    app: web-api
    prod: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api
      prod: canary
  template:
    metadata:
      labels:
        app: web-api
        prod: canary
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: web-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
