upgrade-best-practices/scenario-1-ing-gw/canary/web-api-gw-canary-30.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-api-gw-vs
  namespace: istioinaction
spec:
  # best practice to always use exportTo, especially for 
  # gateway routing
  # in this case we export the VS to the ns that has the gateway workload
  exportTo:
    - "istio-ingress"
  hosts:
  - "istioinaction.io"
  gateways:
  - web-api-gateway
  http:
  - route:
    - destination:
        host: web-api.istioinaction.svc.cluster.local
        subset: stable
      weight: 0
    - destination:
        host: web-api.istioinaction.svc.cluster.local
        subset: canary
      weight: 100
